--- a/index.html
+++ b/index.html
@@ -9,14 +9,67 @@
 <body>
   <div class="container">
     <form action="">
-      <input type="text" name="inputfield1" id="inputfield1" value="">
-      <input type="text" name="operator" id="operator" value="">
-      <input type="text" name="inputfield2" id="inputfield2" value="">
+      <input type="text" name="inputfield1" id="inputfield1" value="" placeholder="first number">
+      <input type="text" name="operator" id="operator" value="" placeholder="operator">
+      <input type="text" name="inputfield2" id="inputfield2" value="" placeholder="second number">
       <p id="demo"></p>
       
       <button type="button" onclick="result()" >Result</button>
     </form>
   </div>
+  <!-- <div class="container1">
+    <form action="">
+      <input type="text" name="inputfield1" id="inputfield1" value="">
+      <input type="text" name="operator" id="operator" value="">
+      <input type="text" name="inputfield2" id="inputfield2" value="">
+      <p id="demo1"></p>
+      
+      <button type="button" onclick="result1()" >Result</button>
+    </form>
+  </div> -->
+  <ol>
+    <li>Arithematic Operators
+      <ol>
+        <li>Addition (+)</li>
+        <li>Subtraction (-)</li>
+        <li>Multiplication (*)</li>
+        <li>Division (/)</li>
+        <li>Modules (%)</li>
+      </ol>
+    </li>
+    <br>
+    <li>Comparison Operators
+      <ol>
+        <li>Greater (>)</li>
+        <li>Greater than equal (>=)</li>
+        <li>lesser (<)</li>
+        <li>lesser than equal (<=)</li>
+        <li>not equal (!=)</li>
+        <li>equals (==)</li>
+      </ol>
+    </li>
+    <br>
+    <li>Bitwise Operators
+      <ol>
+        <li>Bitwise And (&)</li>
+        <li>Bitwise Or (|)</li>
+        <li>Bitwise left Shift (<<)</li>
+        <li>Bitwise Right Shift (>>)</li>
+        <li>Bitwise Fill Zeros Right Shift (>>>)</li>
+        <li>Bitwise Xor (^)</li>
+        <li>Bitwise Not(~)</li>
+      </ol>
+    </li>
+    <br>
+    <li>Logical Operators
+      <ol>
+        <li>Logical And (&&)</li>
+        <li>Logical Or (||)</li>
+        <li>Logical Not (!)</li>
+      </ol>
+    </li>
+  </ol>
+  <h4>Note: Logical operators works only on two expressions or conditions.</h4>
   
   <script src="assests/js/script.js"></script>
 </body>
