--- a/index.html
+++ b/index.html
@@ -15,18 +15,9 @@
       <p id="demo"></p>
       
       <button type="button" onclick="result()" >Result</button>
+      <button type="button" onclick="clearInputFields()" >Clear</button>
     </form>
   </div>
-  <!-- <div class="container1">
-    <form action="">
-      <input type="text" name="inputfield1" id="inputfield1" value="">
-      <input type="text" name="operator" id="operator" value="">
-      <input type="text" name="inputfield2" id="inputfield2" value="">
-      <p id="demo1"></p>
-      
-      <button type="button" onclick="result1()" >Result</button>
-    </form>
-  </div> -->
   <ol>
     <li>Arithematic Operators
       <ol>
